--- a/First-Layout/src/App Components/Home/Home.css
+++ b/First-Layout/src/App Components/Home/Home.css
@@ -3,7 +3,6 @@
     width: 90%;
     border-radius: .7rem;
     margin-inline: auto;
-    grid-template-rows: 1fr 1fr;
 } 
 
 .Home-wrapper .left .home-tab-picture {
@@ -15,13 +14,14 @@
     display: block;
     border: 4px solid white;
     border-radius: .4rem;
-    filter: contrast(.8);
-    box-shadow: 2px 2px 10px white;
+    filter: contrast(.9);
+    box-shadow: 2px 2px 7.5px white;
 }
 .Home-wrapper .left {
     display: flex;   
     justify-content:center ;
     align-items: center;
+    height: 50vh;
 }
 .Home-wrapper .left .image-container{ 
     width: fit-content;
@@ -44,7 +44,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 50vh;
 }
 .Home-wrapper .right h1, .Home-wrapper .right p {
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -72,62 +72,141 @@
     margin-bottom: 2rem;
 }
 
+@media (min-width: 900px){
+    .Home-wrapper{
+        display: flex;
+        align-items: center;
+    }
+    .Home-wrapper .left, .Home-wrapper .right{
+        width: 50vw;
+        height: 100vh;
+    }
 
+    /* Components */
 
+    .Home-wrapper .left .home-tab-picture {
+        width: 15rem;
+        height: 15rem;
+    }
+    .Home-wrapper .right p {
+        font-size: 1.5rem;
+    }
+    .Home-wrapper .right h1 {
+        font-size: 2.5rem;
+    }
+}
 
-
-@media (max-width: 600px) {
-    .Home-wrapper .left {
-        margin-bottom: 5rem;
+@media (max-width: 800px) {
+    .Home-wrapper{
+        display: flex;
+    }
+    .Home-wrapper .left, .Home-wrapper .right{
+        height: 100vh;
+        width: 50vw;    
     }
     .Home-wrapper .left .home-tab-picture {
+        width: 7.5rem;
+        height: 7.5rem;
+    }
+    .Home-wrapper .right p {
+        font-size: 1rem;
+    }
+    .Home-wrapper .right h1 {
+        font-size: 1.5rem;
+        margin-bottom: 0;
+    }
+    .Home-wrapper .right .home-button {
+        font-size: .5rem;
+        border: .5px solid white;
+        border-radius: .2rem;
+    }
+}
+
+@media (max-width: 650px){
+    .Home-wrapper{
+        display: flex;
+    }
+    .Home-wrapper .left, .Home-wrapper .right{
+        height: 100vh;
+        width: 50vw;
+    }
+    .Home-wrapper .left .home-tab-picture {
+        width: 4.5rem;
+        height: 4.5rem;
+    }
+    .Home-wrapper .right p {
+        font-size: .5rem;
+        margin-inline: .5rem;
+        margin-right: .1rem;
+        margin-top: .25rem;
+    } 
+    .Home-wrapper .right h1 {
+        font-size: .75rem;
+        margin-bottom: 0;
+    }
+    .Home-wrapper .right .home-button{
+        padding: .25rem;
+        font-size: .5rem;
+    }
+}
+
+/* Phone */
+
+@media screen and (max-width: 450px) and (min-height: 700px){
+    .Home-wrapper{
+        display: flex;
+        flex-direction: column;
+    }
+    .Home-wrapper .left, .Home-wrapper .right{
+        width: 90vw;
+        height: 46.7vh;
+    }
+    .Home-wrapper .left .home-tab-picture{
         width: 10rem;
         height: 10rem;
-        margin-top: 2.5rem;
-        margin-bottom: 2.5rem;
-    }
+    } 
+    .Home-wrapper .right p {
+        font-size: .75rem;
+        margin-inline: .5rem;
+        margin-right: .1rem;
+    } 
     .Home-wrapper .right h1 {
         font-size: 2rem;
+        margin-bottom: .5rem;
     }
-    .Home-wrapper .right p {
-        font-size: .6rem;
-    }
-}
-
-
-@media (min-width: 700px) {
-    .Home-wrapper .right p {
-        margin: .5rem 4rem;
+    .Home-wrapper .right .home-button{
+        font-size: rem;
+        padding: .5rem .75rem;
     }
 }
 
-@media (min-width: 1000px){
-    .Home-wrapper {
+/* Desktop / Laptop */
+
+@media screen and (max-width: 450px) and (max-height: 300px){
+    .Home-wrapper{
         display: flex;
-        height: fit-content;
+        flex-direction: row;
     }
-    .Home-wrapper .left {
-        width: 50%;
-        justify-content: center;
-        align-items: center;
-        display: flex;
+    .Home-wrapper .left, .Home-wrapper .right{
+        width: 50vw;
+        height: 100vh;
     }
-    .Home-wrapper .left .home-tab-picture {
-        width: 20rem;
-        height: 20rem;
-        margin-top: 2.5rem;
-        margin-bottom: 2.5rem;
+    .Home-wrapper .left .home-tab-picture{
+        width: 5rem;
+        height: 5rem;
     }
-    .Home-wrapper .right{
-        width: 50%;
-        margin-right: .75 rem;
-    }
+    .Home-wrapper .right p {
+        font-size: .4rem;
+        margin-inline: .5rem;
+        margin-right: .1rem;
+    } 
     .Home-wrapper .right h1 {
-        font-size: 3rem;
+        font-size: 1rem;
+        margin-bottom: .5rem;
     }
-    .Home-wrapper .right p {
-        font-size: 1.8rem;
-        margin: .5rem 1.5rem;
-        margin-bottom: 1rem;
+    .Home-wrapper .right .home-button{
+        font-size: .5rem;
+        padding: .25rem .25rem;
     }
 }
+
