--- a/First-Layout/src/App Components/NavigationBar/SideBar.css
+++ b/First-Layout/src/App Components/NavigationBar/SideBar.css
@@ -7,12 +7,13 @@
     background-color: rgb(59, 58, 110);
     position: fixed;
     right: 0;
-    z-index: 1;
+    z-index: 2;
 }
 .SideBar ul{
     width: 100%;
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 .SideBar ul h1{
     text-align: center;
@@ -31,4 +32,18 @@
 }
 .SideBar ul .active{
     box-shadow: 0px 10px 10px -10px white;
+}
+.SideBar ul .hideSideBar{
+    position: absolute;
+    width: fit-content;
+    height: fit-content;
+    padding: .25rem .5rem;
+    left: -1rem;
+    border-radius: 2rem 0 0 2rem;
+    font-size: 2rem;
+}
+@media (min-width: 700px){
+    .SideBar {
+        display: none; 
+    }
 }
