--- a/First-Layout/src/App.css
+++ b/First-Layout/src/App.css
@@ -1,3 +1,6 @@
+*{
+  scroll-behavior: smooth;
+}
 button{
   transition: all .3s linear;
   cursor: pointer;
@@ -15,4 +18,5 @@ body {
   background-origin: border-box;
   background-color: #1d1e1fe3;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
