--- a/First-Layout/src/App Components/NavigationBar/NavigationBar.css
+++ b/First-Layout/src/App Components/NavigationBar/NavigationBar.css
@@ -104,9 +104,12 @@ a:hover {
 @media (max-width: 700px) {
     .header {
         height: 2rem;
+        display: flex;
+        justify-content: unset;
     }
     .header h1{
         font-size: 1rem;
+        margin: 0 auto 0 1rem ;
     }
     .more-tabs {
         display: block;
@@ -119,6 +122,7 @@ a:hover {
         position: relative;
         padding: 0;
         background-color: transparent;
+        margin-left: 1rem;
     }
     #animate {
         z-index: -1;
@@ -160,8 +164,8 @@ a:hover {
     .header {
         height: 1rem;
     }
-    .header h1{
-        font-size: .5rem;
+    .header .title{
+        font-size: 1.5rem;
     }
     .more-tabs {
         display: block;
@@ -203,15 +207,19 @@ a:hover {
 @media (max-width: 450px) and (max-height: 750px){
     .header {
         height: 3rem;
+        display: flex;
+        justify-content: unset;
     }
-    .header h1{
+    .title{
         font-size: 1.5rem;
+        margin: 0 auto 0 .5rem;
     }
     .more-tabs {
         display: block;
         color: rgb(255, 254, 254);
         font-size: 1.5rem;
         font-weight: 524;
+        margin-left: .5rem;
     }
     .more-tabs:hover {
         clip-path: text;
