--- a/First-Layout/src/App Components/NavigationBar/SideBar.css
+++ b/First-Layout/src/App Components/NavigationBar/SideBar.css
@@ -1,26 +1,47 @@
-.hide{
+.hideSidebar{
     display: none;
+    animation: hideSideBar .5s ease;
 }
-.SideBar{
-    width: 25vw;
-    height: 100vh;
-    background-color: rgb(59, 58, 110);
+@keyframes hideSideBar {
+    from {
+        display: block;
+    }
+    to {
+        display: none;
+        left: -12rem;
+    }
+}
+.SideBar, .hideSidebar{
+    width: 10rem;
+    height: 110vh;
+    background-color: #252538;
     position: fixed;
-    right: 0;
+    left: 0;
     z-index: 2;
 }
-.SideBar ul{
+.SideBar {
+    animation: showSideBar .5s ease;
+}
+@keyframes showSideBar {
+    from{
+        left: -12rem;
+    }
+}
+.sidebar-wrapper{
     width: 100%;
     display: flex;
     flex-direction: column;
     position: relative;
 }
-.SideBar ul h1{
+.sidebar-wrapper h1{
     text-align: center;
     padding: 2rem 0px;
     color: White;
 }
-.SideBar ul .sideTabs {
+.sidebar-wrapper a {
+    display: block;
+    width: 100%;
+    height: 100%;
     height: 5rem;
     color: rgb(255, 255, 255);
     position: relative;
@@ -30,20 +51,43 @@
     justify-content: center;
     display: flex;
 }
-.SideBar ul .active{
-    box-shadow: 0px 10px 10px -10px white;
+.sidebar-wrapper a:hover {
+    opacity: .7;
+    background-color: rgba(189, 187, 186, 0.274);
 }
-.SideBar ul .hideSideBar{
+.sidebar-wrapper .active{
+    box-shadow: 0 0 10px -5px white;
+}
+.sidebar-wrapper .hideSideBar{
     position: absolute;
     width: fit-content;
     height: fit-content;
-    padding: .25rem .5rem;
-    left: -1rem;
-    border-radius: 2rem 0 0 2rem;
+    padding: .3rem .75rem .25rem .5rem;
+    right: -2.25rem;
+    border-radius: 0 2rem 2rem 0 ;
     font-size: 2rem;
+    font-weight: 1000;
+    background-color: #252538;
+    color: white;
+    display: flex;
 }
 @media (min-width: 700px){
     .SideBar {
         display: none; 
+    }
+}
+
+@media (max-width: 900px){
+    .SideBar, .hideSidebar{
+        height: 100vh;
+        width: 8rem;
+    }
+    .sidebar-wrapper h1{
+        padding: 1rem;
+        font-size: 1.3rem;
+    }
+    .sidebar-wrapper a {
+        font-size: 1rem;
+        height: 15vh;
     }
 }
