--- a/First-Layout/src/App Components/Projects/Bottom.css
+++ b/First-Layout/src/App Components/Projects/Bottom.css
@@ -1,8 +1,5 @@
 .Projects .bottom{
-    background-color: #afafb1d0;
-    border: 5px solid white;
     border-radius: .5rem;
-    display: flex;
     margin: 1rem auto;
     width: 90.5vw;
     height: 50vh;
@@ -13,12 +10,104 @@
     color: white;
     text-shadow: 0 0 .5rem white;
 }
+.bottom .LanguageWrapper {
+    width: 100%;
+    height: fit;
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+}
+.bottom .LanguageWrapper .row {
+    display: flex;    
+    justify-content: center;
+    gap: 1rem;
+    width: 50%;
+    height: 50vh;
+}
+.bottom .LanguageWrapper .Languages {
+    width: 50%;
+    height: 70vh;
+    border-radius: 3rem;
+    background-color: #979393;
+    border: .5rem solid white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: .35s all linear;
+}
+.Languages:hover {
+    opacity: .6;
+}
+.bottom .LanguageWrapper .Languages .EachPic {
+    width: 12rem;
+    height: 12rem;
+    filter: drop-shadow(2px 2px 3px white);
+}
 
-@media screen and (max-width: 500px) and (max-height: 700px){
+/* Desktop / Laptop */
+
+@media (max-width: 1000px) {
     .bottom h1{
         padding: .1rem;
-        font-size: 1rem;
+        font-size: 2rem;
+    }
 
+    .bottom .LanguageWrapper {
+        display: flex;
+        width: 100%;
+        height: 50vh;
+        margin-top: 2rem;
+    }
+    .bottom .LanguageWrapper .row{
+        width: 50%;
+        height: 31vh;
+        display: flex;
+    }
+    .bottom .LanguageWrapper .Languages{
+        width: 100%;
+        height: 50vh;
+    }
+    .bottom .LanguageWrapper .Languages .EachPic {
+        width: 6rem;
+        height: 7rem;
+        filter: drop-shadow(2px 2px 3px white);
+    }
+    .bottom .LanguageWrapper .Languages h1 {
+        font-size: 1.2rem;
+    }
+}
+
+/* Phone */
+
+@media screen and (max-width: 500px) and (max-height: 750px){
+    
+    .bottom h1{
+        padding: .1rem;
+        font-size: 1.5rem;
+    }
+
+    .bottom .LanguageWrapper {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        width: 100%;
+        height: 43vh;
+    }
+    .bottom .LanguageWrapper .row{
+        width: 100%;
+        height: 21.5vh;
+        display: flex;
+        row-gap: 5rem;
+    }
+    .bottom .LanguageWrapper .Languages{
+        width: 100%;
+        height: 20vh;
+    }
+    .bottom .LanguageWrapper .Languages .EachPic {
+        width: 5rem;
+        height: 5rem;
+        filter: drop-shadow(2px 2px 3px white);
     }
     
 }
